<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="MissingConstraints">

    <ListView
        android:id="@+id/list1"

        android:choiceMode="multipleChoice"

        android:layout_width="390dp"
        android:layout_height="340dp"

        android:layout_marginStart="10dp"
        android:layout_marginTop="248dp"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/add_button"

        android:layout_width="100dp"
        android:layout_height="40dp"

        android:layout_marginStart="292dp"
        android:layout_marginTop="32dp"

        android:text="@string/add"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/translate_button"

        android:layout_width="90dp"
        android:layout_height="50dp"

        android:layout_marginStart="160dp"
        android:layout_marginTop="160dp"

        android:text="@string/translate"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/delete_button"

        android:layout_width="100dp"
        android:layout_height="40dp"

        android:layout_marginStart="292dp"
        android:layout_marginTop="96dp"

        android:text="@string/delete"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/change_locale"

        android:layout_width="200dp"
        android:layout_height="40dp"

        android:layout_marginStart="108dp"
        android:layout_marginTop="620dp"

        android:gravity="center"

        android:text="@string/locale"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/en_edit_text"

        android:layout_width="210dp"
        android:layout_height="40dp"

        android:layout_marginStart="56dp"
        android:layout_marginTop="32dp"
        android:text="@string/print_text"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ru_edit_text"

        android:layout_width="210dp"
        android:layout_height="40dp"

        android:layout_marginStart="56dp"
        android:layout_marginTop="96dp"

        android:text="@string/print_text"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view1"

        android:layout_width="30dp"
        android:layout_height="20dp"

        android:layout_marginStart="16dp"
        android:layout_marginTop="108dp"

        android:text="@string/ru"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view2"

        android:layout_width="30dp"
        android:layout_height="20dp"

        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"

        android:text="@string/en"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>