<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditText
        android:id="@+id/login_edit_text"

        android:layout_width="210dp"
        android:layout_height="40dp"

        android:layout_marginStart="100dp"
        android:layout_marginTop="304dp"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password_edit_text"

        android:layout_width="210dp"
        android:layout_height="40dp"

        android:layout_marginStart="100dp"
        android:layout_marginTop="364dp"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/confirm_button"

        android:layout_width="200dp"
        android:layout_height="40dp"

        android:layout_marginStart="108dp"
        android:layout_marginTop="420dp"

        android:gravity="center"

        android:text="@string/authorize"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/change_locale"

        android:layout_width="200dp"
        android:layout_height="40dp"

        android:layout_marginStart="108dp"
        android:layout_marginTop="620dp"

        android:gravity="center"

        android:text="@string/locale"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/password_text"

        android:layout_width="wrap_content"
        android:layout_height="20dp"

        android:layout_marginStart="28dp"
        android:layout_marginTop="376dp"

        android:gravity="center"

        android:text="@string/password"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_text"

        android:layout_width="50dp"
        android:layout_height="20dp"

        android:layout_marginStart="28dp"
        android:layout_marginTop="316dp"

        android:gravity="center"

        android:text="@string/login"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>